<resources>
    <!--Main-->
    <string name="app_name">帮友</string>
    <string name="tab_message">消息</string>
    <string name="tab_order">订单</string>
    <string name="tab_my_profile">我的</string>
    <string name="title_my_profile">个人信息</string>
    <string name="menu_more_than_99">99+</string>
    <string name="sure">确定</string>

    <!--Message-->
    <string name="message_rob_order">抢单</string>

    <!--Order-->
    <string name="order_pending_handle">待处理订单</string>
    <string name="order_type_pending_handle">待处理单</string>
    <string name="order_pending_accept">待接订单</string>
    <string name="order_type_pending_accept">待接单</string>
    <string name="order_accepted">已接订单</string>
    <string name="order_type_accepted">已接单</string>
    <string name="order_done">完成订单</string>
    <string name="order_type_done">完工单</string>
    <string name="order_accept">接收</string>
    <string name="order_refuse">放弃</string>
    <string name="order_amount_accept">累计接单</string>
    <string name="order_amount_done">累计完成</string>
    <string name="order_amount_num">%1s单</string>
    <string name="order_sign">服务导航</string>p
    <string name="order_install_time">安装时间: %1s</string>
    <string name="order_preinstall_time">预计安装时间: %1s</string>
    <string name="order_install_address">地址: %1s</string>
    <string name="order_has_contact">已联系客户</string>
    <string name="order_not_contact">未联系客户</string>
    <string name="order_not_install">未上门安装</string>
    <string name="order_detail">订单详情</string>
    <string name="order_detail_contact_name">联系人:</string>
    <string name="order_detail_contact_phone">电话:</string>
    <string name="order_detail_contact_address">地址:</string>
    <string name="order_detail_install_scene">安装场景</string>
    <string name="order_detail_install_time">安装时间</string>
    <string name="order_detail_install_progress">安装进度</string>
    <string name="order_detail_wall_type">墙体类型:</string>
    <string name="order_detail_hang_type">挂件类型:</string>
    <string name="order_detail_tv_size">电视尺寸:</string>
    <string name="order_detail_preinstall_time">预计安装时间:</string>
    <string name="order_detail_suggest_time">建议联系时间:</string>
    <string name="order_detail_remain_time">剩余:</string>
    <string name="order_detail_done">点击完成</string>
    <string name="order_detail_phone_customer">联系客户</string>
    <string name="order_detail_install">上门安装</string>
    <string name="order_verify_code">请输入验证码</string>
    <string name="order_input_verify_code">未输入验证码</string>
    <string name="order_error_verify_code">验证码错误</string>

    <!--My profile-->
    <string name="my_profile_info">基本信息</string>
    <string name="my_profile_server">服务信息</string>
    <string name="my_profile_area">服务区域</string>
    <string name="my_profile_bank_card">我的银行卡</string>

</resources>
