<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    >

    <com.bangyou.android.widget.BaseTitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50" />

    <Button
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dimen_5"
        android:layout_marginLeft="@dimen/dimen_5"
        android:layout_marginRight="@dimen/dimen_5"
        android:background="@drawable/btn_blue_color_selector"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_18"
        android:text="@string/order_done"
        android:visibility="visible"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:layout_above="@id/btn_done"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginRight="@dimen/dimen_10"
            android:layout_marginTop="@dimen/dimen_15">

            <TextView
                android:id="@+id/tv_name_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/order_detail_contact_name"
                android:textColor="@color/palette_green_3" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimen_2"
                android:layout_toRightOf="@id/tv_name_key"
                android:text="刘先生" />


            <LinearLayout
                android:id="@+id/layout_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_phone_key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/order_detail_contact_phone"
                    android:textColor="@color/palette_green_3" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_2"
                    android:text="13000989098" />

                <ImageView
                    android:id="@+id/iv_phone"
                    android:layout_width="@dimen/dimen_30"
                    android:layout_height="@dimen/dimen_30"
                    android:padding="@dimen/dimen_10"
                    android:layout_marginLeft="@dimen/dimen_3"
                    android:background="@drawable/btn_green_bg"
                    android:src="@drawable/icon_phone" />


            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_15">

            <TextView
                android:id="@+id/tv_address_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimen_10"
                android:text="@string/order_detail_contact_address"
                android:textColor="@color/palette_green_3" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimen_2"
                android:layout_toRightOf="@id/tv_address_key"
                android:text="刘先生" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5"
                android:layout_toRightOf="@id/tv_address"
                android:src="@drawable/icon_locate" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_order_detail_right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5"
                android:layout_marginRight="@dimen/dimen_5"
                android:text="@string/order_detail_install_scene"
                android:textColor="@color/palette_red_1"
                android:textSize="@dimen/font_18" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_order_detail_left" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15">

            <TextView
                android:id="@+id/tv_wall_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:text="@string/order_detail_wall_type"
                android:textColor="@color/palette_green_3" />

            <TextView
                android:id="@+id/tv_wall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_2"
                android:layout_toRightOf="@id/tv_wall_key"
                android:text="大理石" />

            <TextView
                android:id="@+id/tv_hang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/dimen_2"
                android:layout_marginRight="@dimen/dimen_25"
                android:text="功能挂件" />

            <TextView
                android:id="@+id/tv_hang_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/tv_hang"
                android:text="@string/order_detail_hang_type"
                android:textColor="@color/palette_green_3" />

            <TextView
                android:id="@+id/tv_tv_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_hang"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginTop="@dimen/dimen_15"
                android:text="@string/order_detail_tv_size"
                android:textColor="@color/palette_green_3" />

            <TextView
                android:id="@+id/tv_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_hang"
                android:layout_marginLeft="@dimen/dimen_2"
                android:layout_marginTop="@dimen/dimen_15"
                android:layout_toRightOf="@id/tv_tv_key"
                android:text="17-40寸" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_order_detail_right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5"
                android:layout_marginRight="@dimen/dimen_5"
                android:text="@string/order_detail_install_time"
                android:textColor="@color/palette_red_1"
                android:textSize="@dimen/font_18" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_order_detail_left" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15">

            <LinearLayout
                android:id="@+id/layout_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_time_key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_10"
                    android:text="@string/order_detail_preinstall_time"
                    android:textColor="@color/palette_green_3" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_2"
                    android:layout_toRightOf="@id/tv_time_key"
                    android:text="2016年8月18日 11:00-12:00" />

                <ImageView
                    android:id="@+id/iv_change"
                    android:layout_width="@dimen/dimen_25"
                    android:layout_height="@dimen/dimen_25"
                    android:padding="@dimen/dimen_3"
                    android:layout_marginLeft="@dimen/dimen_3"
                    android:layout_toRightOf="@id/tv_time"
                    android:background="@drawable/btn_gray_bg"
                    android:src="@drawable/icon_change" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_suggest_time_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_time"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginTop="@dimen/dimen_15"
                android:text="@string/order_detail_suggest_time"
                android:textColor="@color/palette_green_3" />

            <TextView
                android:id="@+id/tv_suggest_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_time"
                android:layout_marginLeft="@dimen/dimen_2"
                android:layout_marginTop="@dimen/dimen_15"
                android:layout_toRightOf="@id/tv_suggest_time_key"
                android:text="2015年5月1号-2号" />

            <TextView
                android:id="@+id/tv_remain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/layout_time"
                android:layout_marginLeft="@dimen/dimen_2"
                android:layout_marginRight="@dimen/dimen_25"
                android:layout_marginTop="@dimen/dimen_15"
                android:text="功能挂件" />

            <TextView
                android:id="@+id/tv_remain_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_time"
                android:layout_marginTop="@dimen/dimen_15"
                android:layout_toLeftOf="@id/tv_remain"
                android:text="@string/order_detail_remain_time"
                android:textColor="@color/palette_green_3" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_progress_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_order_detail_right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5"
                android:layout_marginRight="@dimen/dimen_5"
                android:text="@string/order_detail_install_progress"
                android:textColor="@color/palette_red_1"
                android:textSize="@dimen/font_18" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_order_detail_left" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_progress_diagram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15"
            android:layout_marginBottom="@dimen/dimen_15"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_detail_phone_customer" />

                <View
                    android:id="@+id/view_contact"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_15"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:background="@drawable/order_detail_blue_left_progress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_detail_install" />

                <View
                    android:id="@+id/view_install"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_15"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:background="@drawable/order_detail_gray_right_progress" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:id="@+id/layout_handle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/dimen_15"
                android:layout_marginTop="@dimen/dimen_15">

                <Button
                    android:id="@+id/btn_accept"
                    android:layout_width="@dimen/dimen_65"
                    android:layout_height="@dimen/dimen_65"
                    android:background="@drawable/btn_green_bg"
                    android:text="@string/order_accept"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_18" />

                <Button
                    android:id="@+id/btn_refuse"
                    android:layout_width="@dimen/dimen_65"
                    android:layout_height="@dimen/dimen_65"
                    android:layout_marginLeft="@dimen/dimen_25"
                    android:background="@drawable/btn_red_bg"
                    android:text="@string/order_refuse"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_18" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_rob_order"
                android:layout_width="@dimen/dimen_75"
                android:layout_height="@dimen/dimen_75"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/dimen_15"
                android:layout_marginTop="@dimen/dimen_15"
                android:background="@drawable/btn_green_bg"
                android:text="@string/message_rob_order"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_18" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>