<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/palette_gray_1">

    <com.bangyou.android.widget.BaseTitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50" />

    <LinearLayout
        android:id="@+id/layout_statistic"
        android:layout_width="match_parent"
        android:layout_below="@id/title_bar"
        android:layout_height="@dimen/dimen_65"
        android:gravity="center"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="156单"
                android:textSize="@dimen/dimen_15"
                android:textColor="@color/palette_black_3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_amount_accept"
                android:textSize="@dimen/font_18"
                android:textColor="@color/palette_black_3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="156单"
                android:textSize="@dimen/dimen_15"
                android:textColor="@color/palette_black_3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_amount_done"
                android:textSize="@dimen/font_18"
                android:textColor="@color/palette_black_3"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_statistic"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dimen_25"
        android:layout_marginTop="@dimen/dimen_25"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_order_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_5"
            android:layout_marginRight="@dimen/dimen_5"
            android:text="@string/order_sign"
            android:textSize="@dimen/font_22"
            android:textColor="@color/palette_red_1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_order_right" />
    </LinearLayout>

    <GridView
        android:id="@+id/gv_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_tip"
        android:verticalSpacing="@dimen/dimen_15"
        android:listSelector="@android:color/transparent"
        android:numColumns="3" />

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2"
        android:layout_centerInParent="true"
        android:textSize="@dimen/font_25"
        android:textColor="@android:color/holo_red_light"/>-->
</RelativeLayout>
